--- a/app/src/main/res/layout/beer_item.xml
+++ b/app/src/main/res/layout/beer_item.xml
@@ -10,14 +10,29 @@
 
     </data>
 
-    <TextView
-        style="@style/TextAppearance.MaterialComponents.Subtitle1"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/row_height"
-        android:layout_marginLeft="@dimen/side_padding"
-        android:layout_marginRight="@dimen/side_padding"
-        android:gravity="center"
-        android:text="@{beer.name}"
-        tools:text="American Pale Ale" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/row_height"
+        android:orientation="vertical">
 
+        <TextView
+            style="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/side_padding"
+            android:layout_marginRight="@dimen/side_padding"
+            android:text="@{beer.name}"
+            tools:text="American Pale Ale" />
+
+        <TextView
+            style="@style/TextAppearance.MaterialComponents.Subtitle2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/side_padding"
+            android:layout_marginRight="@dimen/side_padding"
+            android:text="@{beer.ingredients.toString()}"
+            tools:text="Hops" />
+
+    </LinearLayout>
 </layout>
