--- a/app/src/main/res/layout/beer_item.xml
+++ b/app/src/main/res/layout/beer_item.xml
@@ -13,6 +13,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/default_margin"
+        android:layout_marginBottom="@dimen/default_margin"
         android:minHeight="@dimen/row_height"
         android:orientation="vertical">
 
